[package]
name = "twitch-helix-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
axum-server = "0.7.2"
bytes = "1.10.1"
hyper = "1.6.0"
reqwest = { version = "0.12.22", features = ["json", "gzip", "brotli", "stream"] }
serde = { version = "1.0.219", features= ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
